--- a/src/SASS/calendar.scss
+++ b/src/SASS/calendar.scss
@@ -5,8 +5,9 @@
   width: 100vw;
   transition: all 0.2s $trans-primary;
   margin-top: 2rem;
+  background-color: $color-light;
   @media screen and (max-width: 624px) {
-    position: sticky;
+    // position: sticky;
     top: 0rem;
     height: 4rem;
   }
@@ -91,8 +92,8 @@
   justify-content: center;
   width: 100vw;
   margin-top: 0;
-  position: sticky;
-  position: -webkit-sticky;
+  // position: sticky;
+  // position: -webkit-sticky;
   background-color: $color-light;
   top: 0rem;
   @media screen and (max-width: 624px) {
@@ -117,8 +118,10 @@
   align-items: center;
   width: 100vw;
   height: auto;
+  margin-top: 1rem;
   @media screen and (max-width: 650px) {
     flex-direction: column;
+    margin-top: 2rem;
   }
 }
 
@@ -201,4 +204,10 @@
       width: 4.1rem;
     }
   }
+}
+
+.sticks {
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
 }
